--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,11 @@ android {
 
 dependencies {
     def version_room = "2.4.0"
-    def version_lifecycle_extensions = "2.4.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
 
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
@@ -54,7 +52,8 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$version_room"
     implementation "androidx.room:room-ktx:$version_room"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation "androidx.room:room-paging:2.4.0"
     kapt "androidx.room:room-compiler:$version_room"
 
 
