--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
     def version_room = "2.4.0"
+    def paging_version = "3.1.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -55,6 +56,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation "androidx.room:room-paging:2.4.0"
     kapt "androidx.room:room-compiler:$version_room"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
 
     testImplementation 'junit:junit:4.+'
