--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation "io.mockk:mockk:1.10.5"
+    testImplementation "androidx.paging:paging-common-ktx:$paging_version"
 
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
